# Polymarket_trader

./: .env  .env.example  .env.example.enhanced  .env.template  .flake8  .gitattributes  .gitignore  BUILDER_VERIFICATION.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  GITHUB_SECURITY.md  NOTICE  README.md  SECURITY.md  START_HERE.bat  TODO.md  Verify-GitHubSafety.ps1  WINDOWS_SETUP.md  backtest.py  docker-compose.yml  main.py  push_private.sh  pyproject.toml  requirements.txt  validate_setup.py  verify_github_safety.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: __init__.py  router.py
api/routes/: __init__.py  bot_routes.py  health_routes.py  portfolio_routes.py
backtesting/: __init__.py  config.py  db.py  engine.py  fetcher.py  metrics.py  runner.py
cmd/: bot.py
config/: __init__.py  polymarket_config.py
dashboard/: __init__.py  api.py
dashboard/static/: app.js  backtest.html  backtest.js  index.html  style.css
data/: __init__.py  database.py  market_provider.py  market_relationship.py  market_scanner.py  market_schema.py  order_book_store.py  polymarket_client.py  polymarket_models.py  session_store.py  simulation_markets.py
database/: __init__.py  init_db.py
docs/: ARCHITECTURE.md
execution/: __init__.py  order_executor.py
internal/core/common/: __init__.py
internal/core/common/service/: __init__.py  service_registry.py
internal/core/execution/domain/: __init__.py  models.py
internal/core/notifications/: __init__.py
internal/core/portfolio/: __init__.py
internal/core/scanner/: __init__.py
internal/core/scanner/domain/: models.py  (+1 more)
pkg/: __init__.py  config.py  errors.py  logger.py
portfolio/: __init__.py  fake_currency_tracker.py  paper_portfolio.py  position_tracker.py
strategies/: __init__.py  base.py  config_loader.py  enhanced_market_scanner.py  registry.py  settlement_arbitrage.py
strategies/demo_buy/: __init__.py  config.yaml  strategy.py
strategies/enhanced_market_scanner/: __init__.py  config.yaml  scanner.py
strategies/example_strategy/: __init__.py  config.yaml  strategy.py
strategies/examples/: demo_buy.py  enhanced_market_scanner.py  paper_demo.py  settlement_arbitrage.py
strategies/paper_demo/: __init__.py  config.yaml  strategy.py
strategies/settlement_arbitrage/: __init__.py  config.yaml  strategy.py
strategies/showcase_demo/: __init__.py  config.yaml  strategy.py
test_setup/: README.md  quick_start.py  test_dashboard.py  test_email.py  test_enhanced_scanner.py  test_simple_scanner.py
tests/: __init__.py  conftest.py
tests/scripts/: README.md  quick_start.py  run_dashboard.py  test_dashboard.py  test_discord.py  test_email.py  test_enhanced_scanner.py  test_simple_scanner.py  validate_setup.py
tests/unit/: conftest.py  test_alerts.py  test_backtest_config.py  test_backtest_db.py  test_backtest_engine.py  test_backtest_fetcher.py  test_backtest_metrics.py  test_config.py  test_config_reload.py  test_dashboard_api.py  test_data_pipeline.py  test_data_validation.py  test_database.py  test_enhanced_market_scanner.py  test_errors.py  test_external_bus.py  test_external_indicators.py  test_external_snapshot.py  test_fake_currency_tracker.py  test_fee_slippage.py  test_integration.py  test_lint.py  test_market_relationship.py  test_market_scanner.py  test_market_scanner_timeout.py  test_market_schema.py  test_order_executor.py  test_pnl_tracker.py  test_polymarket_models.py  test_position_tracker.py  test_pretrade_slippage.py  test_scanner_mock.py  test_session_reviewer.py  test_session_store.py  test_simulation_markets.py  test_slippage.py  test_strategies.py  test_task_scheduler.py  test_tick_recorder.py
utils/: __init__.py  alerts.py  email_sender.py  execution_timer.py  logger.py  pnl_tracker.py  session_reviewer.py  slippage.py  webhook_sender.py
(+19 files in other folders)
