[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-trading-bot"
version = "1.0.0"
description = "Automated trading bot for Polymarket with settlement arbitrage strategy"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "Thomas Quinn", email = "thomas-quinn7@users.noreply.github.com"},
    {name = "Ciaran McDonnell", email = "CiaranMcDonnell@users.noreply.github.com"},
]
keywords = ["polymarket", "trading", "arbitrage", "bot", "cryptocurrency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "colorlog>=6.10.1",
    "py-clob-client>=0.34.6",
    "sqlalchemy>=2.0.48",
    "pytz>=2026.1.post1",
    "scylla-driver>=3.29.9",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]

all = [
    "polymarket-trading-bot[dev]",
]

[project.scripts]
polymarket = "main:main"
bot = "cmd.bot:main"
api = "api.router:main"

[project.urls]
Homepage = "https://github.com/Thomas-quinn7/Polymarket_trader"
Documentation = "https://github.com/Thomas-quinn7/Polymarket_trader#readme"
Repository = "https://github.com/Thomas-quinn7/Polymarket_trader"
Issues = "https://github.com/Thomas-quinn7/Polymarket_trader/issues"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "*.egg-info*"]

[tool.setuptools.package-data]
"*" = ["*.py", "static/*", "templates/*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["tests/scripts", ".git", "__pycache__", "*.egg-info"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
